--- a/ejemplo1/index.html
+++ b/ejemplo1/index.html
@@ -45,7 +45,7 @@
                 <div class="col-12">
                     <div class="alert alert-success text-center" role="alert">
                       <h4 class="alert-heading">El resultado es:</h4>
-                      <p id="resultado">4</p>
+                      <p id="resultado"></p>
                       <p class="mb-0"></p>
                     </div>
                 </div>
