--- a/ejemplo2/index.html
+++ b/ejemplo2/index.html
@@ -17,54 +17,51 @@
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Ingresa numero 1:</label>
-                        <input type="number" name="" id="Numero1" class="form-control" placeholder="Ingresa un numero positivo"
-                            aria-describedby="helpId">
+                        <label for="">Ingresa precio por litro</label>
+                        <input type="number" name="" id="precioltr" class="form-control" placeholder="" aria-describedby="helpId">
+                        
                     </div>
                 </div>
 
             </div>
-
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
-                        <label for="">Ingresa numero 2</label>
-                        <input type="number" name="" id="Numero2" class="form-control" placeholder="Ingresa un numero positivo"
-                            aria-describedby="helpId">
-
+                        <label for="">Ingresa metros cuadrados</label>
+                        <input type="number" name="" id="metros" class="form-control" placeholder="" aria-describedby="helpId">
+                        
                     </div>
                 </div>
+
             </div>
             <div class="row">
                 <div class="col-12">
-                    <button id="btnCalcular" class="btn btn-outline-success btn-block">Calcular suma</button>
+                    <button type="button" name="" id="boton" class="btn btn-outline-success btn-block">Calcular suma</button>
                 </div>
+
             </div>
             <div class="row mt-2">
-
-                <div class="col-12">
-                    <div class="alert alert-success text-center" role="alert">
-                      <h4 class="alert-heading">El resultado es:</h4>
-                      <p id="resultado"></p>
-                      <p class="mb-0"></p>
-                    </div>
-                </div>
+               <div class="alert alert-success text-center" role="alert">
+                 <h4 class="alert-heading"> El precio es:</h4>
+                 <p id="precio"></p>
+                 <p class="mb-0"></p>
+               </div>
+ 
             </div>
         </div>
     </div>
-
-    <!-- Script bootstrap -->
+    <!-- script bootsrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5  KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
-    <!-- scripts -->
+   
+        <!-- scripts -->
     <script src="./app.js"></script>
 </body>
 
