Se finalizo ejemplo 8 en practicas estructuras condocionales simples (faltaba de terminarse)

--- a/Practicas_estructuras_condicionales_simples/ejemplo8/index.html
+++ b/Practicas_estructuras_condicionales_simples/ejemplo8/index.html
@@ -20,7 +20,7 @@
                 <div class="col-4">
                     <div class="form-group">
                         <label for=""></label>
-                        <input type="text" id="nombre1" class="form-control" placeholder="Ingrese nombre"
+                        <input type="text" id="1" class="form-control" placeholder="Ingrese nombre"
                             aria-describedby="helpId">
 
                     </div>
@@ -38,7 +38,7 @@
                 <div class="col-4">
                     <div class="form-group">
                         <label for=""></label>
-                        <input type="text" id="nombre2" class="form-control" placeholder="Ingrese nombre"
+                        <input type="text" id="2" class="form-control" placeholder="Ingrese nombre"
                             aria-describedby="helpId">
 
                     </div>
@@ -54,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    .<button type="button" name="" id="btn Calcular" class="btn btn-primary btn-lg btn-block">Comparar
+                    .<button type="button" name="" id="btnCalcular" class="btn btn-primary btn-lg btn-block">Comparar
                 </div>
             </div>
 
