--- a/Practica_estructuras_ciclicas/ejemplo20/index.html
+++ b/Practica_estructuras_ciclicas/ejemplo20/index.html
@@ -10,17 +10,30 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <div class="container">
-          <div class="jumbotron">
-              <ul id="listaNumerica" class="list-group">
 
+
+    <div class="container">
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-12" id="resultado">
+
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="alert alert-success" role="alert">
+                      <h4 class="alert-heading"> El total es de:</h4>
+                      <p id="total"></p>
                   
-              </ul>
-
-          </div>
-      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+      
     <!-- Optional JavaScript -->
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
