--- a/Practica_estructuras_ciclicas/ejemplo21/index.html
+++ b/Practica_estructuras_ciclicas/ejemplo21/index.html
@@ -11,16 +11,24 @@
   </head>
   <body>
       <div class="container">
-          <div class="jumbotron">
-              <ul id="listaNumerica" class="list-group">
+          <div class="cumbotron">
+              <div class="row">
+                  <div class="col-12" id="resultados"></div>
+              </div>
 
-                  
-              </ul>
-
+              <div class="row">
+                  <div class="col-12">
+                      <div class="alert alert-success" role="alert">
+                        <h4 class="alert-heading">Al final del año ahorrara en pesos:</h4>
+                        <p id="año"></p>
+                        
+                      </div>
+                  </div>
+              </div>
           </div>
       </div>
     <!-- Optional JavaScript -->
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
