--- a/Practica_arreglos/ejemplo18/index.html
+++ b/Practica_arreglos/ejemplo18/index.html
@@ -13,38 +13,23 @@
 </head>
 
 <body>
+
+    <!-- Optional JavaScript -->
     <div class="container">
         <div class="jumbotron">
             <div class="row">
-                <div class="col-12">
-                    <div class="form-group">
-                        <label for=""></label>
-                        <input type="text" name="" id="Size" class="form-control" placeholder=""
-                            aria-describedby="helpId">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
+                <div class="col-6" id="array1">
                     <ul id="array1" class="list-group" role="alert">
                     </ul>
-                </div>
-                <div class="col-6">
-                    <ul id="array2" class="list-group" role="alert">
-                    </ul>
-                </div>
-            </div>
 
-            <div class="row mt-3">
-                <div class="col-12">
-                    <button type="button" name="" id="btnarray" class="btn btn-primary btn-lg btn-block">Ingresar tamaño del arreglo</button>
-                    
+                </div>
+                <div class="col-6" id="array2">
+
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Optional JavaScript -->
     <script src="./app.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
