--- a/Practica_arreglos/ejemplo16/index.html
+++ b/Practica_arreglos/ejemplo16/index.html
@@ -13,32 +13,33 @@
 </head>
 
 <body>
+
     <div class="container">
         <div class="jumbotron">
             <div class="row">
                 <div class="col-12">
                     <div class="form-group">
                         <label for=""></label>
-                        <input type="text" name="" id="Size" class="form-control" placeholder=""
+                        <input type="text" name="" id="encriptation" class="form-control" placeholder="Ingrese palabra"
                             aria-describedby="helpId">
+
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="alert alert-success" role="alert">
+                        <h4 class="alert-heading"></h4>
+                        <p id="resultado"></p>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-6">
-                    <ul id="array1" class="list-group" role="alert">
-                    </ul>
-                </div>
-                <div class="col-6">
-                    <ul id="array2" class="list-group" role="alert">
-                    </ul>
-                </div>
-            </div>
 
-            <div class="row mt-3">
+            <div class="row">
                 <div class="col-12">
-                    <button type="button" name="" id="btnarray" class="btn btn-primary btn-lg btn-block">Ingresar tamaño del arreglo</button>
-                    
+                    <button type="button" id="btnencriptar" class="btn btn-primary btn-lg btn-block">Encriptar</button>
                 </div>
             </div>
         </div>
