--- a/Practica_arreglos/ejemplo20/index.html
+++ b/Practica_arreglos/ejemplo20/index.html
@@ -19,26 +19,22 @@
                 <div class="col-12">
                     <div class="form-group">
                         <label for=""></label>
-                        <input type="text" name="" id="Size" class="form-control" placeholder=""
-                            aria-describedby="helpId">
+                        <input type="text" id="valor" class="form-control" placeholder="" aria-describedby="helpId">
+
                     </div>
                 </div>
             </div>
+
             <div class="row">
-                <div class="col-6">
-                    <ul id="array1" class="list-group" role="alert">
-                    </ul>
-                </div>
-                <div class="col-6">
-                    <ul id="array2" class="list-group" role="alert">
+                <div class="col-12">
+                    <ul id="array" class="list-group" role="alert">
                     </ul>
                 </div>
             </div>
 
-            <div class="row mt-3">
+            <div class="row">
                 <div class="col-12">
-                    <button type="button" name="" id="btnarray" class="btn btn-primary btn-lg btn-block">Ingresar tamaño del arreglo</button>
-                    
+                    <button type="button" id="btnfind" class="btn btn-primary btn-lg btn-block"></button>
                 </div>
             </div>
         </div>
